# manatee

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  vcpkg.json
src/: Game.cpp  Game.h  Logger.cpp  Logger.h  Main.cpp
src/Game/: Game.cpp  Game.h
src/Systems/: MovementSystem.cpp  MovementSystem.h
